  
  [Chuck Short]
  * Merged ubuntu packaging changes:
    - debian/control: Drop socat in favor of netcat.
    - debian/nova-compute.upstart.in, debian/nova.conf:
      Move reference of nova-compute.conf from nova.conf to 
      nova-compute's argv.
    - debian/nova-common.postinst: Create 'nova' group, add user to it.
    - debian/nova-common.postinst: Restrict permissions of /var/log/nova

 -- Monty Taylor <mordred@inaugust.com>  Fri, 30 Sep 2011 09:33:16 -0700

nova (2011.3~rc~20110916.r1173-0ubuntu1) oneiric; urgency=low

  [ Chuck Short ]
  * New uptream version. 
  * debian/rules: Dont fail tests.

  [ Monty Taylor ]
  * Add branching logic for building on lucid.
  * Add vlan as a depend for nova-compute.

 -- Monty Taylor <mordred@inaugust.com>  Wed, 21 Sep 2011 17:49:43 -0400

nova (2011.3~rc~20110909.r1155-0ubuntu1) oneiric; urgency=low

  * New upstream version. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 09 Sep 2011 15:09:02 -0400

nova (2011.3~rc~20110901.1523-0ubuntu1) oneiric; urgency=low

  [ Chuck Short ]
  * Really remove python-ipy.
  * New upstream release.
  * Use "--use_deprecated_auth" by default because we dont support
    kestone yet. (LP: #838768)

  [ James E. Blair ]
  * Add python-unittest2 as a build dep.

  [ Dave Walker (Daviey) ]
  * debian/control: Added python-kombu as a build and run depends.
    - LP: #798876

  [ Scott Moser ]
  * add dependency on qemu-kvm to nova-compute (LP: #833530)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 02 Sep 2011 13:21:22 -0400

nova (2011.3~d4-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream release.

  [Thierry Carrez]
  * No longer run nova-objectstore as root (LP: #820968)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 26 Aug 2011 13:31:14 -0400

nova (2011.3~d4~20110812.1417-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream version
  * Dont respawn the upstart jobs if nova is failing.
  * Remove python-ipy.

  [ Dan Prince ]