@@ -399,6 +399,28 @@ Description: OpenStack Compute - object store
  This is the package contains a very simple S3-like object store.
  For production use, you should use OpenStack Storage, aka. Swift.
 
+Package: nova-console
+Architecture: all
+Depends: ${ostack-lsb-base}, nova-common (= ${binary:Version}), ${python:Depends}, ${misc:Depends}
+Description: OpenStack Compute - Console
+ OpenStack is a reliable cloud infrastructure. Its mission is to produce
+ the ubiquitous cloud computing platform that will meet the needs of public
+ and private cloud providers regardless of size, by being simple to implement
+ and massively scalable.
+ .
+ OpenStack Compute, codenamed Nova, is a cloud computing fabric controller. In
+ addition to its "native" API (the OpenStack API), it also supports the Amazon
+ EC2 API.
+ .
+ Nova is intended to be modular and easy to extend and adapt. It supports many
+ different hypervisors (KVM and Xen to name a few), different database backends
+ (SQLite, MySQL, and PostgreSQL, for instance), different types of user
+ databases (LDAP or SQL), etc.
+ .
+ This package provides the console server.  This enables the use of consoles 
+ to be used along with XVP and XenServer.  It is a publically reachable
+ component which proxies access to VNCs running on compute nodes.
+
 Package: nova-doc
 Architecture: all
 Section: doc
