@@ -1,0 +1,20 @@
+.TH nova\-console 8
+.SH NAME
+nova\-console \- nova VNC console proxy
+
+.SH SYNOPSIS
+.B nova\-console
+.B \-\-flagfile=<flagfilepath>
+
+.SH DESCRIPTION
+.B nova\-console
+
+This man page is a stub. Please contribute.
+
+.SH PARAMETERS
+
+.LP
+.B \-\-flagfile=<flagfilepath>
+.IP
+
+Path to the file containing options.
